src/styles/app.scss
@import 'variables';
@import 'prism';

@import 'forms';
@import 'content';
@import 'gradients';

#nprogress .bar {
    background: #064e3b;
    opacity: 1;
    position: fixed;
    z-index: 1031;
    top: 0;
    left: 0;
    width: 100%;
    height: 2px;
}

html {
    scrollbar-width: thin;
    background: #f8f7f3;
    color: #363636;
    font-family: 'Comfortaa', sans-serif;
    scroll-behavior: smooth;
    -webkit-font-smoothing: antialiased;
    max-width: 100vw;
    overflow-x: hidden;
}

.nav-link {
  background: linear-gradient(to right, rgb(27, 24, 77), rgba(0, 100, 200, 1));
  background-size: 0 0.1em;
  background-position: 0 100%;
  background-repeat: no-repeat;
  transition: all 600ms;
}

.nav-link:hover,
.nav-link:focus {
  background-size: 100% 0.1em;
}

